--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 <body>
     <h1>選擇怪物</h1>
     <div id="monsterSelection">
-        <div class="monster" data-hp="50" data-img="images/monster1.png" data-dead="images/monster1_dead.png" data-drop="gold.png">怪物A (50HP)</div>
-        <div class="monster" data-hp="100" data-img="images/monster2.png" data-dead="images/monster2_dead.png" data-drop="gem.png">怪物B (100HP)</div>
-        <div class="monster" data-hp="150" data-img="images/monster3.png" data-dead="images/monster3_dead.png" data-drop="sword.png">怪物C (150HP)</div>
-        <div class="monster" data-hp="200" data-img="images/monster4.png" data-dead="images/monster4_dead.png" data-drop="helmet.png">怪物D (200HP)</div>
+        <div class="monster" data-hp="50" data-img="images/monster1.png" data-dead="images/monster1_dead.png" data-drop="gold.png">史萊姆 (50HP)</div>
+        <div class="monster" data-hp="100" data-img="images/monster2.png" data-dead="images/monster2_dead.png" data-drop="gem.png">殭屍 (100HP)</div>
+        <div class="monster" data-hp="150" data-img="images/monster3.png" data-dead="images/monster3_dead.png" data-drop="sword.png">骷髏 (150HP)</div>
+        <div class="monster" data-hp="200" data-img="images/monster4.png" data-dead="images/monster4_dead.png" data-drop="helmet.png">豬布林蠻兵 (200HP)</div>
     </div>
 
     <div id="gameArea">
