--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
 <body>
     <h1>選擇怪物</h1>
     <div id="monsterSelection">
-        <div class="monster" data-hp="50" data-img="images/monster1.png" data-dead="images/monster1_dead.png" data-drop="gold.png">史萊姆 (50HP)</div>
-        <div class="monster" data-hp="100" data-img="images/monster2.png" data-dead="images/monster2_dead.png" data-drop="gem.png">殭屍 (100HP)</div>
-        <div class="monster" data-hp="150" data-img="images/monster3.png" data-dead="images/monster3_dead.png" data-drop="sword.png">骷髏 (150HP)</div>
-        <div class="monster" data-hp="200" data-img="images/monster4.png" data-dead="images/monster4_dead.png" data-drop="helmet.png">豬布林蠻兵 (200HP)</div>
+        <div class="monster" data-hp="50" data-img="images/monster1.png" data-dead="images/monster1_dead.png" data-drop="gold.png">怪物A (50HP)</div>
+        <div class="monster" data-hp="100" data-img="images/monster2.png" data-dead="images/monster2_dead.png" data-drop="gem.png">怪物B (100HP)</div>
+        <div class="monster" data-hp="150" data-img="images/monster3.png" data-dead="images/monster3_dead.png" data-drop="sword.png">怪物C (150HP)</div>
+        <div class="monster" data-hp="200" data-img="images/monster4.png" data-dead="images/monster4_dead.png" data-drop="helmet.png">怪物D (200HP)</div>
     </div>
 
     <div id="gameArea">
@@ -99,24 +99,34 @@
     let maxHp = 0;
     let drops = [];
     let deadImage = "";
+	let hitSound = new Audio();
+    let deadSound = new Audio();
+    let spinSound = new Audio("sounds/spin_result.mp3");
 
     document.querySelectorAll(".monster").forEach(monster => {
-        monster.addEventListener("click", function() {
-            let hp = parseInt(this.dataset.hp);
-            let img = this.dataset.img;
-            deadImage = this.dataset.dead;
-            drops = this.dataset.drop.split(",");
-            currentMonsterHp = hp;
-            maxHp = hp;
-            document.getElementById("monsterHp").textContent = hp;
-            document.getElementById("damageTaken").textContent = "";
-            document.getElementById("healthBar").style.width = "100%";
-            document.getElementById("monsterImage").src = img;
-            document.getElementById("monsterSelection").style.display = "none";
-            document.getElementById("gameArea").style.display = "block";
-            document.getElementById("lootArea").style.display = "none";
-        });
+    monster.addEventListener("click", function() {
+        let hp = parseInt(this.dataset.hp);
+        let img = this.dataset.img;
+        let monsterIndex = [...this.parentElement.children].indexOf(this) + 1; // 取得怪物編號 (1~4)
+
+        deadImage = this.dataset.dead;
+        drops = this.dataset.drop.split(",");
+        currentMonsterHp = hp;
+        maxHp = hp;
+
+        // 確保音效檔案名稱對應正確的怪物編號
+        hitSound.src = `sounds/hit${monsterIndex}.mp3`;
+        deadSound.src = `sounds/dead${monsterIndex}.mp3`;
+
+        document.getElementById("monsterHp").textContent = hp;
+        document.getElementById("damageTaken").textContent = "";
+        document.getElementById("healthBar").style.width = "100%";
+        document.getElementById("monsterImage").src = img;
+        document.getElementById("monsterSelection").style.display = "none";
+        document.getElementById("gameArea").style.display = "block";
+        document.getElementById("lootArea").style.display = "none";
     });
+});
 
     function spinWheel() {
     let effects = [
@@ -146,6 +156,10 @@
             clearInterval(interval);
             let chosenEffect = effects[Math.floor(Math.random() * effects.length)];
             spinResult.textContent = `輪盤結果: ${chosenEffect.text}`;
+			
+			 // 播放輪盤音效
+            spinSound.play();
+			
             if (chosenEffect.effect) chosenEffect.effect();
         }
     }, intervalTime);
@@ -162,8 +176,17 @@
         document.getElementById("healthBar").style.width = (currentMonsterHp / maxHp * 100) + "%";
         document.getElementById("damageTaken").textContent = amount < 0 ? `(-${Math.abs(amount)})` : `(+${amount})`;
         
+		if (amount < 0) {
+        // 播放受擊音效
+        hitSound.currentTime = 0; // 讓音效能重複播放
+        hitSound.play();
+    }
+	
         if (currentMonsterHp <= 0) {
             document.getElementById("monsterImage").src = deadImage;
+			 // 播放死亡音效
+			 deadSound.play();
+			 
             setTimeout(() => {
                 document.getElementById("gameArea").style.display = "none";
                 document.getElementById("lootArea").style.display = "block";
